# ir-small

./: .env.example  .gitignore  CHUNKING_UPDATE.md  QUICK_START_MODELS.md  README.md  VECTOR_CACHE_UPDATE.md  pyproject.toml  requirements.txt
docs/: CHUNKING_QUICK_GUIDE.md  CHUNKING_STRATEGY.md  COMPETITION_PLAYBOOK.md  EMBEDDING_MODELS.md  JINA_V5_SETUP.md  MULTI_MODEL_UPDATE.md  SENTENCE_TRANSFORMERS_MODELS.md  VECTOR_CACHE.md  chunking_visualization.txt
scripts/: _bootstrap.py  _probe_llm.py  benchmark_models.py  compete.py  download_all_models.py  download_model.py  embed_all_models.py  eval_questions.py  manage_cache.py  selftest.py  switch_model.py  test_chunking.py  test_endpoints.py
src/: app.py  config.py  docstore.py  embedder.py  llm.py  reqlog.py  retriever.py  textutils.py  vector_cache.py
tmp/: New Session.md  kiro-clean-check-solve.md  prompt.md  request.md  rule-of-resource.md
